# strava_watts_calc_fit

./: .gitignore  README.md  pyproject.toml  strava_stream.py  write_fit.py
